--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.15",
     "next": "^8.1.0",
     "next-images": "^1.1.2",
     "next-redux-wrapper": "^3.0.0-alpha.3",
