--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "~components/*": ["components/*"],
       "~store/*": ["store/*"],
-      "~lib/*": ["lib/*"]
+      "~lib/*": ["lib/*"],
+      "~pages/*": ["pages/*"]
     }
   }
 }
