--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "~components/*": ["components/*"],
       "~store/*": ["store/*"],
       "~lib/*": ["lib/*"],
-      "~pages/*": ["pages/*"]
+      "~pages/*": ["pages/*"],
+      "~hooks/*": ["hooks/*"]
     }
   }
 }
