--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
     "react-feather": "^2.0.3",
     "react-geosuggest": "^2.12.1",
