--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-geosuggest": "^2.12.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "ws": "^7.2.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
